--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 BASE_URL = 'https://demoqa.com/'
 LOGIN_URL = 'https://demoqa.com/login'
-USER_NAME = ''
-PASSWORD = ''
+USER_NAME = 'P@ssw0rd1'
+PASSWORD = 'P@ssw0rd1'
