--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.40.1",
-    "@types/node": "^20.10.4"
-  },
-  "dependencies": {
+    "@types/node": "^20.10.4",
     "dotenv": "^16.3.1",
     "save-dev": "^0.0.1-security"
   }
